--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <h1 class="title">Give it a spin</h1> -->
-    <!-- <div id="container"></div> -->
+    <div id="container"></div>
     <!-- <div id="app"></div> -->
     <script type="module" src="/src/main.js"></script>
     <!-- <script type="module" src="/src/main.js"></script> -->
